# TradingBot

./: AGENTS.md  README.md  config.py  eval_colab.py  fix-plan.md  main.py  project.toml  pyproject.toml  textual_trader.py  trade.py
.github/workflows/: ci.yml  deploy.yml
docs/: index.html
docs/compose/plans/: 2026-06-23-codebase-fixes.md  2026-06-29-model-perf-fix.md
models/: stock_model.py
plans/: 001-fix-dotenv-loading.md  001-paper-trader-hardening.md  002-ddp-barrier-scaler-cudaguard.md  002-fix-docs.md  003-fix-nyse-holidays.md  003-msrr-loss-rename.md  004-add-test-coverage.md  004-walkforward-fold-isolation.md  005-add-precommit-hooks.md  005-secrets-redact-colab-template.md  006-threshold-isotonic-regression.md  007-cache-raw-data-across-cycles.md  008-yfinance-retry.md  009-ci-pipeline.md  010-test-coverage.md  011-type-annotations.md  012-minor-bug-fixes.md  README.md
src/: colab_gen.py  crypto_pipeline.py  data_pipeline.py  features.py  inference.py  paper_trader.py  utils.py
tests/: test_colab_gen.py  test_config.py  test_config_utils.py  test_ddp.py  test_inference.py  test_inference_utils.py  test_paper_trader.py  test_pretrain.py  test_threshold_opt.py  test_trade.py  test_training.py  test_utils.py
training/: pretrain.py  threshold.py  train.py
