[project]
name = "tradingbot"
version = "0.1.0"
description = "Multi-stock ML trading bot with inter-stock relationship learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.1.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyperclip>=1.11.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "yfinance>=1.4.1",
    "unlockedpd>=0.3.0",
    "alpaca-py>=0.43.0",
    "rich>=14.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:numba.*",
    "ignore::pandas.errors.Pandas4Warning",
]

[tool.mypy]
strict_optional = true

# `src.features` chains Series.rolling / .replace / .iloc operations that
# `pandas-stubs` flags with extremely precise overload mismatches that are
# not runtime bugs. Silence only the overloaded-operator & index errors,
# NOT everything — real bugs (wrong arg types, etc.) still surface.
[[tool.mypy.overrides]]
module = "src.features"
ignore_missing_imports = true
disable_error_code = [
    "operator",
    "index",
    "arg-type",
    "call-overload",
    "return-value",
]

# Tests use `unittest.mock.MagicMock` whose attributes (return_value,
# call_args, assert_not_called, side_effect) aren't precisely typed.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "attr-defined",
    "arg-type",
    "call-overload",
    "return-value",
    "dict-item",
]

# Tolerate missing type stubs for third-party imports.
[[tool.mypy.overrides]]
module = [
    "src.data_pipeline",
    "src.utils",
    "src.paper_trader",
    "training.train",
    "training.threshold",
    "trade",
    "main",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "types-pyperclip>=1.11.0.20260508",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
    "types-tqdm>=4.68.0.20260608",
]
